--- a/src/main/webapp/WEB-INF/views/layout.html
+++ b/src/main/webapp/WEB-INF/views/layout.html
@@ -8,14 +8,11 @@
 	<title>$pageTitle</title>
 	<link rel="shortcut icon" href="/favicon.ico">
 	<link href="/css/bootstrap.css" rel="stylesheet">
-	<link href="/css/socialize.css" rel="stylesheet">
+	<link href="/css/masternode.css" rel="stylesheet">
 	<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>	
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-resource.js"></script>
 </head>
 <body>
 	<div class="container">
