--- a/src/main/webapp/WEB-INF/views/upload.html
+++ b/src/main/webapp/WEB-INF/views/upload.html
@@ -1,14 +1,9 @@
-<h1>Upload Image</h1>
-
-#if (!$error)
-<form action="$uploadUrl" method="post" enctype="multipart/form-data">
-    <input type="file" name="file">
+<form id="upload_form" action="/upload" method="post" enctype="multipart/form-data">
+    <input id="file" type="file" name="file">
 	<br><br>
-    <input type="submit" value="Upload Image">	
+    <input id="upload_image" type="submit" value="Upload">	
 </form>
-#else
-	Service unavailable
-#end
 
+<div id="result"></div>
 
 
